--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple, lightweight JavaScript plugin for subtle scrolling animations.",
   "main": "scroll-entrance.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "preinstall": "npx npm-force-resolutions"
   },
   "repository": {
     "type": "git",
@@ -27,5 +28,8 @@
     "gulp": "^3.9.1",
     "gulp-uglify": "^1.5.4",
     "pump": "^1.0.1"
+  },
+  "resolutions": {
+    "graceful-fs": "^4.2.4"
   }
 }
